# GuardianMapStudio

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-GuardianMapStudio-Architecture-v2.md  02-GuardianMapStudio-Roadmap-v2.md  03-GuardianMapStudio-Spatial-Accuracy-v1.md  04-GuardianMapStudio-MVP01-Specification-v2.md  05-GuardianMapStudio-MVP01-Technical-Specification-v2.md  06-GuardianMapStudio-Coding-Standards-v1.md  07-GuardianMapStudio-Glossary-v1.md  08-GuardianMapStudio-Domain-Model-v2.md  09-GuardianMapStudio-API-Spec-v2.md  10-GuardianMapStudio-Validation-Geometry-Engine-v2.md  11-GuardianMapStudio-Frontend-Spec-v2.md  12-GuardianMapStudio-AI-Mapping-Architecture-v1.md  13-GuardianMapStudio-Implementation-Blueprint-v3.md  14-GuardianMapStudio-Execution-Guide-v1.md  15-GuardianMapStudio-OSM-Import-And-UI-Cleanup-v1.md  16-GuardianMapStudio-Editor-UX-Improvements-v1.md  17-GuardianMapStudio-Editor-UX-Patch-v1.md  deviations-stage1.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  App.vue.js  main.js  main.ts
maps/: DamhaV.osm
src/guardianmapstudio/: main.py
tests/: conftest.py
tests/fixtures/: sample_condominio.osm
tests/integration/: test_api_crossroads_detect.py  test_api_export.py  test_api_osm_import.py  test_api_projects.py  test_api_roads.py  test_api_roads_merge.py  test_api_waypoints.py  test_api_workspaces.py  test_database.py
tests/unit/: test_contracts.py  test_crossroad_engine.py  (+9 more)
(+74 files in other folders)
