[project]
name = "guardianmapstudio"
version = "0.1.0"
description = "Map authoring tool for Guardian autonomous vehicle platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.40",
    "pydantic-settings==2.7.0",
    "shapely==2.0.6",
    "pyproj==3.7.0",
    "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
    "httpx==0.28.1",
    "ruff==0.8.6",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[project.scripts]
guardianmapstudio = "guardianmapstudio.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardianmapstudio"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "LOG"]
ignore = ["S101", "S104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108"]
"tests/conftest.py" = ["S101", "S105", "S106", "S108"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["shapely.*", "pyproj.*"]
ignore_missing_imports = true
